# AnalysisAVP

./: .gitignore  .gitmodules  LICENSE  README.md  update.bat  update.sh  仓库瘦身.md  流媒体协议.md  音视频基本原理.md  音视频媒体格式.md  音视频框架.md
analysis/: CMakeLists.txt  build_android.bat  common.h
analysis/aac/: CMakeLists.txt  aac.cpp  aac.h  main.cpp
analysis/flv/: CMakeLists.txt  flv.cpp  flv.h  main.cpp
analysis/h264/: CMakeLists.txt  h264.cpp  h264.h  main.cpp
analysis/mp4/: CMakeLists.txt  main.cpp  mp4.cpp  mp4.h
analysis/rtmp/: librtmp拉流抓包.md  rtmp.txt
analysis/rtp/: CMakeLists.txt  main.cpp  rtp.cpp  rtp.h
analysis/rtp/dump/: rtp.dump
analysis/rtsp/: main.cpp
analysis/rtsp/dump/: rtsp.dump
analysis/srs/conf/: srs.conf
example/: CMakeLists.txt  build_android.bat  build_android.sh  build_apple.sh  build_ios.sh  build_linux.sh  build_windows.bat  create_msvc_android.bat
example/SDL2/: CMakeLists.txt  main.cpp
example/WebRTC/android/app/: build.gradle
example/WebRTC/android/app/src/main/: AndroidManifest.xml
example/WebRTC/android/gradle/wrapper/: gradle-wrapper.properties
example/WebRTC/client/: index.html
example/WebRTC/client/js/: main.js
example/WebRTC/demo/client/: index.html  webrtc-https.conf  webrtc-websocket-proxy.conf
example/WebRTC/demo/client/js/: main.js
example/WebRTC/demo/server/: package-lock.json  package.json  server.js
example/WebRTC/device1/: index.html
example/WebRTC/device1/js/: client.js
example/WebRTC/device2/: index.html
example/WebRTC/device2/js/: client.js
example/WebRTC/html/: audio.html  av.html  first.html  video.html
example/WebRTC/js/: first.html
example/WebRTC/node/first/: first.js
example/WebRTC/node/websocket/: client.html  package-lock.json  package.json  server.js
example/WebRTC/nodejs/: client.html  package-lock.json  package.json  server.js
example/WebRTC/server/: package-lock.json  server.js
example/android/Camera/app/src/main/: AndroidManifest.xml
example/android/Camera/gradle/wrapper/: gradle-wrapper.properties
example/android/Microphone/: gradle.properties
example/android/Microphone/app/src/main/: AndroidManifest.xml
example/android/Microphone/gradle/wrapper/: gradle-wrapper.properties
example/android/camera/app-camera/: .gitignore  settings.gradle
example/android/camera/app-camera/app/: build.gradle
example/android/camera/app-camera/app/src/main/: AndroidManifest.xml
example/android/camera/app-camera/gradle/wrapper/: gradle-wrapper.properties
example/android/capture/app-capture/: build.gradle  settings.gradle
example/android/capture/app-capture/app/: build.gradle
example/android/capture/app-capture/app/src/main/: AndroidManifest.xml
example/android/capture/app-capture/gradle/wrapper/: gradle-wrapper.properties
example/android/capture/screencap/: CMakeLists.txt  build_android.sh
example/android/capture/screencap/src/: screencap.cpp
example/android/common_code/com/gongluck/helper/: CameraHelper.java  CaptureHelper.java  FormatCovertHelper.java  PermissionHelper.java
example/android/opengles/opengles-java/app/src/main/: AndroidManifest.xml
example/android/opengles/opengles-java/gradle/wrapper/: gradle-wrapper.properties
example/android/record/app-record/gradle/wrapper/: gradle-wrapper.properties
example/android/record/app/src/main/: AndroidManifest.xml
example/android/record/screenrecord/: CMakeLists.txt  build_android.sh
example/android/record/screenrecord/include/android/: BnGraphicBufferSource.h  BnOMXNode.h  BpGraphicBufferSource.h  BpOMXNode.h  IGraphicBufferSource.h  IOMXNode.h
example/android/record/screenrecord/src/: EglWindow.cpp  EglWindow.h  FontBitmap.h  FrameOutput.cpp  FrameOutput.h  Overlay.cpp  Overlay.h  Program.cpp  Program.h  TextRenderer.cpp  TextRenderer.h  screenrecord.cpp  screenrecord.h
example/faac/: CMakeLists.txt  main.cpp
example/faad2/: CMakeLists.txt  main.cpp
example/fdk-aac/: CMakeLists.txt  main.cpp
example/ffmpeg/: CMakeLists.txt  main.cpp  mux.cpp  resample.cpp
example/ios/Microphone/Microphone/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
example/ios/Microphone/Microphone.xcodeproj/: project.pbxproj
example/ios/iosCamera/iosCamera/: AppDelegate.h  AppDelegate.m  Info.plist  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
example/ios/iosCamera/iosCamera.xcodeproj/: project.pbxproj
example/ios/iosCamera/iosCamera.xcodeproj/xcuserdata/ldyun-mac.xcuserdatad/xcschemes/: xcschememanagement.plist
example/ios/iosCamera/iosCamera/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
example/ios/test/test/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
example/ios/test/test.xcodeproj/: project.pbxproj
example/ios/test/test.xcodeproj/project.xcworkspace/xcuserdata/ldyun-mac.xcuserdatad/: UserInterfaceState.xcuserstate
example/ios/test/test/Base.lproj/: Main.storyboard
example/jni/: settings.gradle
example/jni/app/: build.gradle
example/jni/app/src/main/: AndroidManifest.xml
example/jni/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
example/jni/app/src/main/res/layout/: activity_main.xml
example/jni/gradle/wrapper/: gradle-wrapper.properties
example/jni/libs/src/: CMakeLists.txt  build_ndk.bat  clibrary.cpp  clibrary.h
example/libde265/: CMakeLists.txt  main.cpp
example/libopus/: CMakeLists.txt  main.cpp
example/librtmp/: CMakeLists.txt
example/librtmp/pullstream/: CMakeLists.txt  main.cpp
example/librtmp/pullstream_packet/: CMakeLists.txt  main.cpp
example/librtmp/pushstream/: CMakeLists.txt  main.cpp
example/libwebp/: CMakeLists.txt  main.cpp
example/libyuv/: CMakeLists.txt  main.cpp
example/nvcodec/: CMakeLists.txt  main.cpp
example/openh264/: CMakeLists.txt  main.cpp
example/x264/: CMakeLists.txt  main.cpp
example/x265/: CMakeLists.txt  main.cpp
example/zlmediakit/: CMakeLists.txt  h264_media_server.cpp
rtp_rtcp/: README.md
webrtc/: Nack.md  Pacer.md  README.md  qos.md
(+69 files in other folders)
